bindings/s5_flutter/lib/src/rust/frb_generated.h

// EXTRA BEGIN
typedef struct DartCObject *WireSyncRust2DartDco;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
void store_dart_post_cobject(DartPostCObjectFnType ptr);
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_list_prim_u_8_loose {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_loose;
void frbgen_s5_flutter_wire__crate__api__S5Client_connect(int64_t port_,
                                                          struct wire_cst_list_prim_u_8_strict *seed_phrase,
                                                          struct wire_cst_list_prim_u_8_strict *remote_node_id);
void frbgen_s5_flutter_wire__crate__api__S5Client_create_directory(int64_t port_,
                                                                   uintptr_t that,
                                                                   struct wire_cst_list_prim_u_8_strict *path);
void frbgen_s5_flutter_wire__crate__api__S5Client_delete_file(int64_t port_,
                                                              uintptr_t that,
                                                              struct wire_cst_list_prim_u_8_strict *path);
void frbgen_s5_flutter_wire__crate__api__S5Client_disconnect(int64_t port_, uintptr_t that);
void frbgen_s5_flutter_wire__crate__api__S5Client_download_blob(int64_t port_,
                                                                uintptr_t that,
                                                                struct wire_cst_list_prim_u_8_strict *hash_hex);
void frbgen_s5_flutter_wire__crate__api__S5Client_download_file(int64_t port_,
                                                                uintptr_t that,
                                                                struct wire_cst_list_prim_u_8_strict *path);
void frbgen_s5_flutter_wire__crate__api__S5Client_file_exists(int64_t port_,
                                                              uintptr_t that,
                                                              struct wire_cst_list_prim_u_8_strict *path);
void frbgen_s5_flutter_wire__crate__api__S5Client_file_get(int64_t port_,
                                                           uintptr_t that,
                                                           struct wire_cst_list_prim_u_8_strict *path);
void frbgen_s5_flutter_wire__crate__api__S5Client_is_connected(int64_t port_, uintptr_t that);
void frbgen_s5_flutter_wire__crate__api__S5Client_list_directory(int64_t port_,
                                                                 uintptr_t that,
                                                                 struct wire_cst_list_prim_u_8_strict *path);
WireSyncRust2DartDco frbgen_s5_flutter_wire__crate__api__S5Client_node_id(uintptr_t that);
WireSyncRust2DartDco frbgen_s5_flutter_wire__crate__api__S5Client_public_key(uintptr_t that);
void frbgen_s5_flutter_wire__crate__api__S5Client_test_connection(int64_t port_, uintptr_t that);
void frbgen_s5_flutter_wire__crate__api__S5Client_upload_file(int64_t port_,
                                                              uintptr_t that,
                                                              struct wire_cst_list_prim_u_8_strict *path,
                                                              struct wire_cst_list_prim_u_8_strict *filename,
                                                              struct wire_cst_list_prim_u_8_loose *content,
                                                              struct wire_cst_list_prim_u_8_strict *media_type);