bindings/s5_flutter/lib/src/rust/frb_generated.io.dart


  @protected
  void sse_encode_unit(void self, SseSerializer serializer);

  @protected
  void sse_encode_usize(BigInt self, SseSerializer serializer);

  @protected
  void sse_encode_i_32(int self, SseSerializer serializer);
}

// Section: wire_class

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint

/// generated by flutter_rust_bridge
class RustLibWire implements BaseWire {
  factory RustLibWire.fromExternalLibrary(ExternalLibrary lib) =>
      RustLibWire(lib.ffiDynamicLibrary);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  RustLibWire(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  RustLibWire.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void store_dart_post_cobject(int ptr) {
    return _store_dart_post_cobject(ptr);
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
    'store_dart_post_cobject',
  );
  late final _store_dart_post_cobject =
      _store_dart_post_cobjectPtr.asFunction<void Function(int)>();

  void wire__crate__api__S5Client_connect(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> seed_phrase,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> remote_node_id,
  ) {
    return _wire__crate__api__S5Client_connect(
      port_,
      seed_phrase,
      remote_node_id,
    );
  }

  late final _wire__crate__api__S5Client_connectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__S5Client_connect');
  late final _wire__crate__api__S5Client_connect =
      _wire__crate__api__S5Client_connectPtr.asFunction<
          void Function(
            int,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>();

  void wire__crate__api__S5Client_create_directory(
    int port_,
    int that,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> path,
  ) {
    return _wire__crate__api__S5Client_create_directory(port_, that, path);
  }

  late final _wire__crate__api__S5Client_create_directoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.UintPtr,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__S5Client_create_directory');
  late final _wire__crate__api__S5Client_create_directory =
      _wire__crate__api__S5Client_create_directoryPtr.asFunction<
          void Function(
              int, int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void wire__crate__api__S5Client_delete_file(
    int port_,
    int that,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> path,
  ) {
    return _wire__crate__api__S5Client_delete_file(port_, that, path);
  }

  late final _wire__crate__api__S5Client_delete_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.UintPtr,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__S5Client_delete_file');
  late final _wire__crate__api__S5Client_delete_file =
      _wire__crate__api__S5Client_delete_filePtr.asFunction<
          void Function(
              int, int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void wire__crate__api__S5Client_disconnect(int port_, int that) {
    return _wire__crate__api__S5Client_disconnect(port_, that);
  }

  late final _wire__crate__api__S5Client_disconnectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.UintPtr)>>(
    'frbgen_s5_flutter_wire__crate__api__S5Client_disconnect',
  );
  late final _wire__crate__api__S5Client_disconnect =
      _wire__crate__api__S5Client_disconnectPtr
          .asFunction<void Function(int, int)>();

  void wire__crate__api__S5Client_download_blob(
    int port_,
    int that,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> hash_hex,
  ) {
    return _wire__crate__api__S5Client_download_blob(port_, that, hash_hex);
  }

  late final _wire__crate__api__S5Client_download_blobPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.UintPtr,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__S5Client_download_blob');
  late final _wire__crate__api__S5Client_download_blob =
      _wire__crate__api__S5Client_download_blobPtr.asFunction<
          void Function(
              int, int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void wire__crate__api__S5Client_download_file(
    int port_,
    int that,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> path,
  ) {
    return _wire__crate__api__S5Client_download_file(port_, that, path);
  }

  late final _wire__crate__api__S5Client_download_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.UintPtr,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__S5Client_download_file');
  late final _wire__crate__api__S5Client_download_file =
      _wire__crate__api__S5Client_download_filePtr.asFunction<
          void Function(
              int, int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void wire__crate__api__S5Client_file_exists(
    int port_,
    int that,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> path,
  ) {
    return _wire__crate__api__S5Client_file_exists(port_, that, path);
  }

  late final _wire__crate__api__S5Client_file_existsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.UintPtr,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__S5Client_file_exists');
  late final _wire__crate__api__S5Client_file_exists =
      _wire__crate__api__S5Client_file_existsPtr.asFunction<
          void Function(
              int, int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void wire__crate__api__S5Client_file_get(
    int port_,
    int that,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> path,
  ) {
    return _wire__crate__api__S5Client_file_get(port_, that, path);
  }

  late final _wire__crate__api__S5Client_file_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.UintPtr,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__S5Client_file_get');
  late final _wire__crate__api__S5Client_file_get =
      _wire__crate__api__S5Client_file_getPtr.asFunction<
          void Function(
              int, int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void wire__crate__api__S5Client_is_connected(int port_, int that) {
    return _wire__crate__api__S5Client_is_connected(port_, that);
  }

  late final _wire__crate__api__S5Client_is_connectedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.UintPtr)>>(
    'frbgen_s5_flutter_wire__crate__api__S5Client_is_connected',
  );
  late final _wire__crate__api__S5Client_is_connected =
      _wire__crate__api__S5Client_is_connectedPtr
          .asFunction<void Function(int, int)>();

  void wire__crate__api__S5Client_list_directory(
    int port_,
    int that,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> path,
  ) {
    return _wire__crate__api__S5Client_list_directory(port_, that, path);
  }

  late final _wire__crate__api__S5Client_list_directoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.UintPtr,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__S5Client_list_directory');
  late final _wire__crate__api__S5Client_list_directory =
      _wire__crate__api__S5Client_list_directoryPtr.asFunction<
          void Function(
              int, int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  WireSyncRust2DartDco wire__crate__api__S5Client_node_id(int that) {
    return _wire__crate__api__S5Client_node_id(that);
  }

  late final _wire__crate__api__S5Client_node_idPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.UintPtr)>>(
    'frbgen_s5_flutter_wire__crate__api__S5Client_node_id',
  );
  late final _wire__crate__api__S5Client_node_id =
      _wire__crate__api__S5Client_node_idPtr
          .asFunction<WireSyncRust2DartDco Function(int)>();

  WireSyncRust2DartDco wire__crate__api__S5Client_public_key(int that) {
    return _wire__crate__api__S5Client_public_key(that);
  }

  late final _wire__crate__api__S5Client_public_keyPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.UintPtr)>>(
    'frbgen_s5_flutter_wire__crate__api__S5Client_public_key',
  );
  late final _wire__crate__api__S5Client_public_key =
      _wire__crate__api__S5Client_public_keyPtr
          .asFunction<WireSyncRust2DartDco Function(int)>();

  void wire__crate__api__S5Client_test_connection(int port_, int that) {
    return _wire__crate__api__S5Client_test_connection(port_, that);
  }

  late final _wire__crate__api__S5Client_test_connectionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.UintPtr)>>(
    'frbgen_s5_flutter_wire__crate__api__S5Client_test_connection',
  );
  late final _wire__crate__api__S5Client_test_connection =
      _wire__crate__api__S5Client_test_connectionPtr
          .asFunction<void Function(int, int)>();

  void wire__crate__api__S5Client_upload_file(
    int port_,
    int that,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> path,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> filename,
    ffi.Pointer<wire_cst_list_prim_u_8_loose> content,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> media_type,
  ) {
    return _wire__crate__api__S5Client_upload_file(
      port_,
      that,
      path,
      filename,
      content,
      media_type,
    );
  }

  late final _wire__crate__api__S5Client_upload_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.UintPtr,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__S5Client_upload_file');
  late final _wire__crate__api__S5Client_upload_file =
      _wire__crate__api__S5Client_upload_filePtr.asFunction<
          void Function(
            int,
            int,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>();

  WireSyncRust2DartDco wire__crate__api__decrypt_chunk_xchacha20poly1305(
    ffi.Pointer<wire_cst_list_prim_u_8_loose> key,
    int chunk_index,
    ffi.Pointer<wire_cst_list_prim_u_8_loose> ciphertext,
  ) {
    return _wire__crate__api__decrypt_chunk_xchacha20poly1305(
      key,
      chunk_index,
      ciphertext,
    );
  }
